# rust-rpi-rgb-led-matrix

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
examples/: arguments.rs  embedded-graphics-basic.rs
rpi-led-matrix/: CHANGELOG.md  Cargo.toml  README.md
rpi-led-matrix-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
rpi-led-matrix-sys/src/: c_stubs.rs  lib.rs
rpi-led-matrix/examples/: c-api-basic.rs  embedded-graphics-basic.rs
rpi-led-matrix/src/: args.rs  canvas.rs  font.rs  led_color.rs  lib.rs  matrix.rs  options.rs
src/: args.rs  c.rs  canvas.rs  font.rs  led_color.rs  lib.rs  matrix.rs  options.rs  rgbmatrix_mock.rs
