[package]
name = "rpi-led-matrix"
description = "Bindings for Hzeller's RPi-RGB-Led-Matrix"
version = "0.1.5"
authors = [
    "Vincent Pasquier <vincentpasquier@posteo.net>",
    "Tyler Holmes <tyler@holmesengineering.com>",
]
repository = "https://github.com/rust-rpi-led-matrix/rust-rpi-rgb-led-matrix"
homepage = "https://docs.rs/rpi-led-matrix/"
build = "build.rs"
license = "GPL-3.0"
readme = "README.md"
edition = "2018"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 2
